# epp_adrija

./: .gitignore  .pre-commit-config.yaml  CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
bld/latex/: epp_adrija_pres.nav
bld/python/data/: Ind_rename.dta  abc.csv  eventstudy.dta  final_df.dta  mechanisms.dta  output_df.csv  processed_dataframe.dta  raw_dataframe.dta
bld/python/models/: mechanism.csv  mechanism.html  mechanism.pkl  mechanism.tex  mechanism_mental_health.pkl  mechanism_school_rep.pkl  mechanism_sport_active.pkl  mechanism_voluteer_work.pkl  mechanism_voluteer_work.tex  model.pickle  reg_model_gym.csv  reg_model_gym1.csv  reg_model_gym2.pkl
bld/python/predictions/: marital_status.csv  qualification.csv
bld/python/tables/: estimation_results.tex  mechanism_mental_health.tex  mechanism_school_rep.tex  mechanism_sport_active.tex  mechanism_volunteer_work.tex  reg_model_gym2.tex
notebooks/: test.ipynb  test.py
paper/: epp_adrija.tex  epp_adrija_pres.nav  epp_adrija_pres.snm  epp_adrija_pres.tex  refs.bib  task_paper.py
src/epp_adrija/: __init__.py  config.py
src/epp_adrija/analysis/: model.py  task_analysis.py
src/epp_adrija/data/: merge_original_youth_data.dta
src/epp_adrija/data_management/: __init__.py  clean_data.py  clean_data_non_gym.py  data_info.yaml  task_data_management.py
src/epp_adrija/final/: __init__.py  final.py  plot.py  (+1 more)
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
(+2 files in other folders)
