[metadata]
name = epp_adrija
description = Elevating Trust by increasing Instruction hours-German G8 Reform 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s6adroyy/epp_adrija
author = Adrija Roy
author_email = s6adroyy@uni-bonn.de
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/s6adroyy/epp_adrija
    Documentation = https://github.com/s6adroyy/epp_adrija
    Github = https://github.com/s6adroyy/epp_adrija
    Tracker = https://github.com/s6adroyy/epp_adrija/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/epp_adrija/_version.py
